--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gtl",
-  "displayName": "gtl",
+  "name": "gtl-syntax",
+  "displayName": "GTL syntax highlighting",
   "description": "Template language for Goil, the Trampoline RTOS .oil compiler",
   "version": "0.0.1",
-	"publisher": "mbriday",
+	"publisher": "TrampolineRTOS",
 	"license": "GPLv2",
   "engines": {
     "vscode": "^1.83.0"
@@ -11,6 +11,10 @@
   "categories": [
     "Programming Languages"
   ],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/TrampolineRTOS/gtlSyntaxForVSCode.git"
+	},
   "keywords": [
 		"OIL",
 		"OSEK",
